--- a/themes/newtheme/css/_gui-window.css
+++ b/themes/newtheme/css/_gui-window.css
@@ -73,6 +73,7 @@
         background-color: #fafafa;
 
         &__item {
+            position: relative;
             display: inline-block;
             width: auto;
             height: 31px;
