--- a/themes/newtheme/css/_dropdown-menu.css
+++ b/themes/newtheme/css/_dropdown-menu.css
@@ -2,7 +2,7 @@
     display: block;
     position: absolute;
     width: 200px;
-    background-color: #fafafa;
+    background-color: white;
     /* border: 1px solid gray; */
 
     &__item {
@@ -11,7 +11,7 @@
         width: 100%;
         height: 31px;
         padding: 6px 6px;
-        border: 1px solid #eee;
+        border: 1px solid #737373;
         color: #333333;
         font-size: 0.9rem;
     }
@@ -22,7 +22,7 @@
         width: 100%;
         height: 31px;
         padding: 6px 6px;
-        border: 1px solid #eee;
+        border: 1px solid #737373;
         color: #333333;
         font-size: 0.9rem; 
     }
@@ -33,7 +33,7 @@
         width: 100%;
         height: 31px;
         padding: 6px 6px;
-        border: 1px solid lightgray;
+        border: 1px solid #d5d5d5;
         color: black;
         font-size: 0.9rem;
     }
@@ -44,7 +44,7 @@
         width: 100%;
         height: 31px;
         padding: 6px 6px;
-        border: 1px solid lightgray;
+        border: 1px solid #d5d5d5;
         color: black;
         font-size: 0.9rem; 
     }
