--- a/themes/newtheme/css/_dropdown-menu.css
+++ b/themes/newtheme/css/_dropdown-menu.css
@@ -1,7 +1,7 @@
 .dropdown-menu {
     display: block;
     position: absolute;
-    width: 200px;
+    min-width: 200px;
     background-color: white;
     /* border: 1px solid gray; */
 
