--- a/themes/newtheme/css/_gui-panel.css
+++ b/themes/newtheme/css/_gui-panel.css
@@ -224,10 +224,15 @@
             }
     
             &--active {
-                border-top: 1px solid black;
-                padding-top: 6px;
+                padding-top: 5px;
                 color: black;
                 background-color: rgba(255, 255, 255, 0.87);
+            }
+
+            html &--active:hover {
+                padding-top: 5px;
+                color: black;
+                background-color: rgba(255, 255, 255, 0.93);
             }
     
             p {
@@ -286,6 +291,10 @@
                     }
                 }
             }
+        }
+
+        &__item:hover {
+            background-color: rgba(255, 255, 255, 0.03);
         }
 
         &__switcher {
