Change the duration of window min and unmin animations and the duration of the background-color transition of the windows' panel items in the task-bar.

--- a/themes/newtheme/css/_gui-panel.css
+++ b/themes/newtheme/css/_gui-panel.css
@@ -202,7 +202,7 @@
             height: 100%;
             width: 230px;
             color: white;
-            transition: background, color 0.2s;
+            transition: color 0.2s, background-color 0.07s;
             text-align: center;
     
             &__icon {
