--- a/themes/newtheme/css/_gui-overlay.css
+++ b/themes/newtheme/css/_gui-overlay.css
@@ -4,7 +4,7 @@
     width: 100vw;
     height: 100vh;
     z-index: 4;
-    background-color: rgb(77, 87, 94);
+    background-color: white;
     opacity: 1.0;
     transition-property: opacity;
     transition-duration: .3s;
@@ -19,7 +19,7 @@
     }
 
     p {
-        color: white;
+        color: rgb(30, 30, 30);
         font-size: 2rem;
         text-align: center;
     }
@@ -29,7 +29,7 @@
         width: 192px;
         height: 192px;
         margin-bottom: 32px;
-        border-top: 4px solid white;
+        border-top: 2px solid rgb(30, 30, 30);
         border-radius: 50%;
         
         transform-origin: 50% 50%;
