--- a/themes/newtheme/css/_dropdown-menu.css
+++ b/themes/newtheme/css/_dropdown-menu.css
@@ -7,7 +7,7 @@
 
     &__item {
         position: relative;
-        display: inline-block;
+        display: block;
         width: 100%;
         height: 31px;
         padding: 6px 6px;
@@ -19,7 +19,7 @@
 
     &__item--menu-item {
         position: relative;
-        display: inline-block;
+        display: block;
         width: 100%;
         height: 31px;
         padding: 6px 6px;
